# ChangeLog for media-libs/xine-lib
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.2 2002/03/12 13:01:06 seemant Exp $

*xine-lib-0.9.7-r1 (12 Mar 2002)

  12 Mar 2002; Seemant Kulleen <seemant@rocketmail.org> ChangeLog:

  Added a check for the nls toggle in USE, and makes sure nls is disabled if
  the toggle is off.

*xine-lib-0.9.7 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.