@@ -1,7 +1,7 @@
-# Copyright 1999-2000 Gentoo Technologies, Inc.
+# Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
 # Author Philippe Namias <pnamias@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3blaster/Attic/mp3blaster-3.0_p8.ebuild,v 1.3 2001/11/17 11:28:28 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3blaster/Attic/mp3blaster-3.0_p8.ebuild,v 1.4 2002/03/28 23:00:28 seemant Exp $
 
 A=${PN}-3.0p8.tar.gz
 S=${WORKDIR}/${PN}-3.0p8
@@ -12,13 +12,13 @@ HOMEPAGE="http://www.stack.nl/~brama/mp3blaster"
 DEPEND=">=sys-libs/ncurses-5.2
         nas? ( >=media-libs/nas-1.4.1 )
         mysql? ( >=dev-db/mysql-3.23.36 )
-        vorbis? ( >=media-libs/libvorbis-1.0_beta1 )"
+        oggvorbis? ( >=media-libs/libvorbis-1.0_beta1 )"
 
 src_compile() {
 	local myconf
 	use nas && myconf="${myconf} --with-nas"
 	use mysql && myconf="${myconf} --with-mysql"
-	use vorbis || myconf="${myconf} --without-oggvorbis"
+	use oggvorbis || myconf="${myconf} --without-oggvorbis"
 
 	./configure --prefix=/usr --mandir=/usr/share/man --host=${CHOST} ${myconf} || die
 
