@@ -1,10 +1,16 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.2 2002/03/12 13:01:06 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.3 2002/03/28 22:58:50 seemant Exp $
+
+*xine-lib-0.9.7-r1 (28 Mar 2002)
+
+  28 Mar 2002; Seemant Kulleen <seemant@gentoo.org> xine-lib-0.9.7-r1.ebuild :
+	
+  oggvorbis will be the USE toggle instead of separate ogg and vorbis flags.
 
 *xine-lib-0.9.7-r1 (12 Mar 2002)
 
-  12 Mar 2002; Seemant Kulleen <seemant@rocketmail.org> ChangeLog:
+  12 Mar 2002; Seemant Kulleen <seemant@gentoo.org> xine-lib-0.9.7-r1.ebuild :
 
   Added a check for the nls toggle in USE, and makes sure nls is disabled if
   the toggle is off.
